--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
 
 .body {
   --TopBar-Height: 7.278vh;
-
   overflow-y: unset;
 }
 
@@ -154,6 +153,113 @@
   line-height: 44px;
   text-decoration: none;
   color: #fff5e1;
+}
+/* -------------------------------------------------------------------------------------------------------- */
+
+
+.Popup-wrapper{
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+.Popup {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  color: #344563;
+  font-family: 'Inter', sans-serif;
+  height: 85vh;
+  width: 85vw;
+  background: #fff;
+  padding: 16px;
+}
+
+.Popup-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  grid-row: 1;
+  color: #344563;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  line-height: 44px;
+  font-weight: 700;
+}
+
+.Popup-title h2{
+  display: flex;
+  justify-content: space-between;
+}
+
+.Popup-title h2 button{
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: none;
+}
+
+.Popup-title ul {
+  bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.Popup-title ul li {
+  margin-top: 10px;
+  margin-right: 10px;
+  list-style: none;
+  color: #3C3A39;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  padding: 12px 10px;
+  border: 1px solid #979493;
+}
+
+.Popup-img {
+  grid-row: 2;
+  margin: 24px 0;
+  width: 100%;
+  height: 220px;
+  background-size: cover;
+  background-position: center;
+}
+
+.Popup-content {
+  grid-row: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.Popup-content nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Popup-Source, .Popup-Live{
+  display: flex;
+  justify-content: center;
+}
+
+.Popup-Source img, .Popup-Live img {
+  margin-left: 10px;
+}
+
+.Popup-content nav a {
+  padding: 12px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 17px;
+  line-height: 24px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  background-color: #FF6B00;
 }
 
 /* -------------------------------------------------------------------------------------------------------- */
@@ -306,8 +412,9 @@
       180.45deg,
       rgba(38, 38, 38, 0) 0.75%,
       rgba(38, 38, 38, 0.9) 61.94%
-    ),
-    url(src/img/Card-Background.png) no-repeat center;
+    );
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   min-height: 386px;
   margin: 12px 0;
@@ -674,7 +781,7 @@ textarea[name="user_message"]::placeholder {
   }
 
   .Works-Card:hover {
-    background: url(src/img/Card-Background.png) no-repeat center;
+    background: url(src/img/Card-Background.png) no-repeat center cover;
   }
 
   .Works-Card:hover .Works-Card-Content {
