--- a/index.css
+++ b/index.css
@@ -284,6 +284,10 @@
   justify-content: space-between;
 }
 
+.Popup-Source {
+  margin-left: 10px;
+}
+
 .Popup-Source,
 .Popup-Live {
   display: flex;
@@ -292,6 +296,7 @@
 
 .Popup-Source img,
 .Popup-Live img {
+  height: 24px;
   margin-left: 10px;
 }
 
@@ -700,6 +705,44 @@ textarea[name="user_message"]::placeholder {
     font-size: 20px;
     line-height: 3.2vw;
   }
+
+  /* -------------------------------------------------------------------------------------------------------- */
+
+  .Popup {
+    padding: 24px;
+    grid-template-rows: 130px 1fr;
+    font-weight: 400;
+    grid-template-columns: 1.2fr 0.8fr;
+  }
+  
+  .Popup-title {
+    font-family: 'Crete Round', sans-serif;
+    grid-area:1/1/1/span 2;
+    margin-bottom: 16px;
+    justify-content: unset;
+  }
+  
+  .Popup-img {
+    grid-row: 2;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .Popup-content {
+    padding-left: 24px;
+    grid-row: 2;
+    grid-column: 2;
+  }
+
+  .Popup-content nav {
+    justify-content: unset;
+  }
+
+  .Popup img{
+    margin: auto 0;
+  }
+  
 
   /* -------------------------------------------------------------------------------------------------------- */
   .Works {
